--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
+.big-background {
+    min-height: 100vh;
+    min-width: 100vh;
+    background-color: hsl(30, 6%, 35%);
+    z-index: -1;
+}
+
 .page-wrapper {
     min-height: 100vh;
-    background-color: #1D1F21;
+    background-color: hsl(30, 5%, 10%);
+    width: 60%;
+    margin: 0 auto;
 }
 
 .title {
     text-align: center;
 }
+
 .title h1 {
     display: inline-block;
     font-family: 'Ubuntu', sans-serif;
@@ -14,9 +24,9 @@
     font-size: 50px;
     font-weight: 800;
     min-height: 80px;
+    min-width: 60%;
     border-radius: 10px;
-    margin: 30px;
-    padding: 20px 50px 20px 50px
+    padding: 20px 50px 20px 50px;
 }
 
 #generate, #tweet-button {
@@ -67,8 +77,4 @@
 .tweet {
     text-align: center;
     margin-top: 40px;
-}
-
-#tweet-button {
-    
 }
